# thug

./: .clang-format  .clang-tidy  .gitignore  ASSET_STRUCTURE_IMPLEMENTATION.md  BUILDING.md  CHANGES.md  CMakeLists.txt  DIRECTSOUND_IMPLEMENTATION.md  EXECUTABLE_COMPLETION.md  GRAPHICS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LEGAL.md  PR_SUMMARY.md  README.md  RENDERING_OPTIMIZATIONS.md  ROADMAP.md  ROADMAP_IMPLEMENTATION_SUMMARY.md  TASKS.md  TASKS_ACTIVE.md  TASKS_ARCHIVE.md  test_integration.cpp  test_sdl2_window.cpp  test_vulkan
Code/Core/: CMakeLists.txt  Defines.h  HashTable.h  LookupTable.h  assert.cpp  checks.h  cstring.cpp  debug.cpp  debug.h  defines.h  dynamictable.cpp  dynamictable.h  head.h  hook.h  lookuptable.cpp  lookuptable.h  math.h  mem_stat.h  messages.h  p_debug.cpp  project.h  search.h  signatrs.h  singleton.h  stringhashtable.h  task.cpp  thread.h  timestampedflag.h  tlist.cpp  tstack.cpp  wn32
Code/Core/Debug/: Assert.cpp  Messages.h  module.h
Code/Core/HAL/: Audio.cpp  Audio.h  AudioOpenAL.cpp  AudioOpenAL.h  README.md
Code/Core/List/: Head.h  node.h
Code/Core/Math/: math.cpp  math.h  quat.h
Code/Core/String/: CString.cpp  cstring.h  stringutils.cpp
Code/Core/Support/: class.h  lock.h  ref.h
Code/Core/Task/: Tlist.cpp  list.h  stack.h  task.h
Code/Gel/: CMakeLists.txt  assman.cpp  audsimpleaudio.cpp  audsimpleaudio.h  audsimpleplayer.cpp  audsimpleplayer.h  batchtricoll.cpp  bgm  cameracomponent.cpp  cameralookaroundcomponent.cpp  cameralookaroundcomponent.h  camerautil.cpp  camerautil.h  collcache.cpp  collcache.h  collideanddiecomponent.cpp  collideanddiecomponent.h  collision.cpp  collision.h  colltridata.cpp  colltridata.h  event.h  floatinglabelcomponent.cpp  floatinglabelcomponent.h  gunslingercameralookaroundcomponent.cpp  gunslingerwalkcameracomponent.cpp  gunslingerwalkcomponent.cpp  horsecameracomponent.cpp  horsecameracomponent.h  horsecomponent.cpp  horsecomponent.h  inpman.cpp  inputcomponent.cpp  inputcomponent.h  mainloop  mainloop.cpp  modellightupdatecomponent.cpp  modellightupdatecomponent.h  module.h  movablecontactcomponent.cpp  (+48 more)
Code/Gel/AssMan/: AssMan.cpp  NodeArrayAsset.cpp  asset.h  assman.h  binaryasset.cpp  binaryasset.h  collisionasset.cpp  collisionasset.h  sceneasset.cpp  sceneasset.h  skinasset.cpp  textureasset.cpp  textureasset.h
Code/Gel/AssetLoader/: AssetLoader.cpp  AssetLoader.h
Code/Gel/Collision/: CollCache.cpp  CollTriData.cpp  CollTriData.h  Collision.cpp  batchtricoll.h  collenums.h
Code/Gel/Components/: ObjectHookManagerComponent.cpp  bouncycomponent.h  cameracomponent.h  nearcomponent.h  nodearraycomponent.h  objecthookmanagercomponent.h  particlecomponent.h  proximtriggercomponent.h  ribboncomponent.h  staticvehiclecomponent.h  statsmanagercomponent.h  streamcomponent.h  vehiclesoundcomponent.h  walkcomponent.h
Code/Gel/Input/: inpserv.cpp
Code/Gel/Movies/: Movies.cpp  movies.h
Code/Gel/Music/: music.cpp
Code/Gel/Object/: basecomponent.h
Code/Gel/Scripting/: script.h
Code/Gel/SoundFX/: SoundFX  soundfx.h
Code/Gfx/: CMakeLists.txt  Gfx  NxImposter.h  NxModel.cpp  NxScene.cpp  animcontroller.cpp  animcontroller.h  blureffect.cpp  blureffect.h  bonedanim.cpp  bonedanim.h  bonedanimtypes.h  casutils.cpp  casutils.h  customanimkey.cpp  customanimkey.h  element3d.cpp  element3d.h  facemassage.cpp  facemassage.h  facetexture.cpp  facetexture.h  menu2.cpp  menu2.h  modelappearance.cpp  modelappearance.h  modelbuilder.cpp  modelbuilder.h  ngps  nx.cpp  nxanimcache.cpp  nxanimcache.h  nxfont.cpp  nxfont.h  nxfontman.cpp  nxfontman.h  nxgeom.cpp  nxgeom.h  nxhierarchy.h  nximposter.cpp  (+81 more)
Code/Gfx/2D/: screenelement2.h  spriteelement.h
Code/Gfx/Backend/: GraphicsBackend.cpp  GraphicsBackend.h  MODERN_GRAPHICS.md  ModernRenderer.cpp  ModernRenderer.h  OpenGLBackend.cpp  OpenGLBackend.h  README.md  ShaderLibrary.h  ShaderManager.cpp  ShaderManager.h
Code/Gfx/DirectX/: README.md  p_nxmodel.cpp  p_nxmodel.h
Code/Gfx/Examples/: backend_test.cpp  integrated_demo.cpp  integrated_ml_demo.cpp  ml_test.cpp  modern_rendering_example.cpp  texture_enhancement_demo.cpp
Code/Gfx/Image/: imagebasic.h
Code/Gfx/ML/: GraphicsEnhancer.cpp  GraphicsEnhancer.h  INTEGRATION_GUIDE.md  README.md  TextureEnhancer.cpp  TextureEnhancer.h
Code/Gfx/NGC/: p_nxtextured3dpoly.h  p_nxwin2d.h
Code/Gfx/NGPS/: p_nxanimcache.h  p_nxfont.h  p_nxgeom.h  p_nximposter.h  p_nxlightman.h  p_nxsector.h  p_nxwin2d.h  palettegen.h
Code/Gfx/OpenGL/: README.md  p_nxmodel.cpp  p_nxmodel.h
Code/Gfx/Vulcan/: IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  QUICK_REFERENCE.md  README.md  VULKAN_API_IMPLEMENTATION.md  VULKAN_API_REFERENCE.md  VULKAN_IMPLEMENTATION_NOTES.md  VULKAN_INTEGRATION_GUIDE.md  example.cpp  p_nxmodel.cpp  p_nxmodel.h  test_api  test_api_implementation.cpp  test_vulkan_integration.cpp  test_vulkan_rendering.cpp  test_vulkan_standalone.cpp  test_vulkan_stub
Code/Gfx/Win32/: p_memview.h
Code/Gfx/XBox/: p_nxlight.h  p_nxmesh.h  p_nxparticleribbontrail.h  p_nxparticlestar.h
Code/Sk/: CMakeLists.txt  bettingguy.cpp  catgoal.cpp  competitiongoal.cpp  competitiongoal.h  createatrick.cpp  createatrick.h  editorcameracomponent.cpp  editorcameracomponent.h  edmap.cpp  edmap.h  edrail.cpp  exportmsg.h  filmgoal.cpp  filmgoal.h  findgapsgoal.cpp  followob.h  frontend.cpp  frontend.h  gameflow.cpp  gamehandler.cpp  gamemode.cpp  gamemode.h  gamemsg.h  gamenet.cpp  gameobj.cpp  gameobj.h  gapmanager.cpp  goal.cpp  goaleditorcomponent.cpp  goalmanager.cpp  goalped.cpp  horsegoal.cpp  horsegoal.h  lobby.cpp  lobby.h  minigame.cpp  minigame.h  movingobject.cpp  movingobject.h  (+63 more)
Code/Sk/Components/: goaleditorcomponent.h  raileditorcomponent.h  (+12 more)
Code/Sys/: CMakeLists.txt  Profiler.cpp  asyncfilesys.cpp  asyncfilesys.h  asynctypes.h  compactpool.cpp  fileio_iop.h  filelibrary.cpp  mcman.h  memcard  p_asyncfilesys.cpp  p_mcman.cpp  poolable.cpp  poolable.h  poolmanager.cpp  poolmanager.h  pre.cpp  profiler.cpp  profiler.h  siodev.h  sioman.h  sys.h  xbox
(+218 files in other folders)
